--- a/client/src/components/css/Editor/EventList.css
+++ b/client/src/components/css/Editor/EventList.css
@@ -3,5 +3,6 @@
     width: 100%;
     height: 83%;
     top: 0%;
-    overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
